calc.css
@font-face {
  font-family: "Paintball";
  src: url(./assets/fonts/ProjectPaintball.woff) format("woff"),
  url(./assets/fonts/ProjectPaintball.ttf) format("ttf");
}

@font-face {
  font-family: "Splatfont";
  src: url(./assets/fonts/Splatfont2.woff) format("woff"),
  url(./assets/fonts/ProjectPaintball.woff) format("ttf");
}

html {
  position: relative;
  min-height: 100%;
  overflow-y: scroll;
}

body {
  margin-bottom: 50px;
  background: #222 !important;
  background-image: url("assets/img/ui/bg-primary.jpg") !important;
}

body:not(.show-focus-outlines) button:focus,
body:not(.show-focus-outlines) [tabindex]:focus {
  outline: none;
}

.nopadding {
  padding: 0px !important;
}

.neonstripes { background: repeating-linear-gradient( 45deg, #dbe826, #dbe826 20px, #c4d412 20px, #c4d412 40px ); }

.redstripes { background: repeating-linear-gradient( 45deg, #d63e53, #d63e53 20px, #f0624a 20px, #f0624a 40px ); }

.tealstripes { background: repeating-linear-gradient( 45deg, #19e1ba, #19e1ba 20px, #06be8a 20px, #06be8a 40px ); }

.orangestripes { background: repeating-linear-gradient( 45deg, #f07807, #f07807 20px, #d25012 20px, #d25012 40px ); }

.blackstripes { background: repeating-linear-gradient( 45deg, #222, #222 30px, #444 30px, #444 60px ); }

.purplestripes { background: repeating-linear-gradient( 45deg, #842cd6, #842cd6 20px, #6b01bb 20px, #6b01bb 40px ); }

#splat-header {
  background-image:  url("assets/img/ui/headerbg.png"), url("assets/img/ui/noise.png"), repeating-linear-gradient( 45deg, #222, #222 30px, #444 30px, #444 60px ) !important;
  background-repeat: repeat-x;
  box-shadow: 0 2px 10px 2px #000;
  z-index:1 !important ;
  background: #222;
  text-align: center;
  padding:5px;
}

#splat-header img {
  height:130px;
}

#loadout {
  padding-top:5px;
}

#weapon {
  height: 105px;
  padding-left: 10px;
  padding-right: 10px;
}

#weapon .subspe-bubble {
  margin-right:10px;
}

#weapon .col-xs-7 .row {
  padding-top:8px;
}

#weapon .col-xs-5 {
  text-align: center;
}

#weapon .gear-wrapper{
  height:66px;
  width:66px;
}

 #weapon .gear-wrapper img {
   max-height:60px;
   width:auto;
 }

#abilitybox {
  background: #555;
  background-image: url("assets/img/ui/zig-zag.png"), url("assets/img/ui/zig-zag.png"), url("assets/img/ui/zig-zag.png");
  background-size: 80px 80px;
  padding-top:15px;
  text-align:center;
}

#abilitybox .abilityicon {
  margin-left: 4px;
  margin-bottom:4px;
  margin-right: 4px;
}

#abilitybox hr {
  border-top: 3px dotted rgba(255,255,255,0.6);
}

#loadout-gap {
  margin-right:5px !important;
}

#stat-gap {
  margin-left:5px !important;
}

#statbox {
  margin-top: 9px;
  font-family: "Splatfont";
  background: #c9c9c9;
  background-image: url("assets/img/ui/bg-dots.png"), url("assets/img/ui/bg-spots.png");
  background-size: 50px 50px, 300px 300px;
}

#statbox .cardheader {
  margin-bottom: 5px;
}

#statbox h3 {
  font-family:"Splatfont";
  margin: 4px !important;
  margin-left:12px !important;
}

.gear-wrapper {
  width: 70px;
  height: 70px;
  padding: 3px;
  border-radius: 10px;
  display:inline-block;
  position: relative;
}

.gear-wrapper .gear-icon {
  position:absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%,-50%);
}

.gear-wrapper .main-icon {
  position:absolute;
  right:0px;
  top:0px;
}

.gear-wrapper .main-icon img {
  width:28px;
  height:auto;
  border-radius: 50%;
  background: rgba(0,0,0,0.8);
}

.gear-wrapper .brand-icon {
  position:absolute;
  left:0px;
  bottom:0px;
}

.gear-wrapper .brand-icon img {
  width:28px; height:auto;
}

.gear-wrapper .annie {
  position: absolute;
  right: 2px;
  bottom: 2px;
}

.gear-wrapper .annie img {
  width:24px;
  height: auto;
}

.gear-wrapper .not-possible {
  position:absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%,-50%)
}

.picker .gear-wrapper {
  width: 80px;
  height: 80px;
  margin: 2px;
  margin-top: 0px;
  margin-bottom: 0px;
  background-color: #ffffee;
  background-image: url('assets/img/ui/bg-spots.png');
  background-size: 80px auto;
}

.picker .gear-wrapper .gear-icon {
  height:80px;
  width:80px;
}

.ability-wrapper {
  margin-top: -10px;
  display:flex;
  justify-content: space-around;
  padding-left: 10px;
  padding-right: 10px;
}

.ability-wrapper .abilityicon {
  align-self: flex-end;
}

.ability-wrapper .abilityicon.large {
  height: 50px; width: 50px;
}

.ability-wrapper .abilityicon.small {
  height: 40px; width: 40px;
}

.abilityicon {
  z-index: 2 !important;
  border-radius: 50%;
  width:56px;
  height:56px;
  background:#000;
  border: 2px solid #888;
  border-right: 0px;
  border-bottom: 0px;
  background-size:100%;
  box-shadow: 0 0 0 1px #000;
}

.abilityicon.sub {
  width:40px;
  height:40px;
}

.abilityicon.main {
  width:50px;
  height:50px;
}

.footer {
  position:absolute;
  bottom: 0;
  width: 100%;
  height: 50px;
  font-family: "Splatfont";
  color: #999;
  font-size: 12pt;
  text-align: center;
}

.footer a, .footer a:visited {
  text-decoration: none !important;
  color: #bbb !important;
}

.footer a:hover, .footer a:focus, .footer a:active {
  color: #fff !important;
  text-decoration: none !important;
}

.basic-content {
  color: #fff;
  font-family: "Splatfont";
  font-size: 12pt;
  padding-left: 20px;
  padding-right: 20px;
}

#about {
  text-align: center;
}

.basic-content a, .basic-content a:visited {
  text-decoration: none !important;
  color: #19e1ba !important;
}

.basic-content a:hover, .basic-content a:focus, .basic-content a:active {
  color: #fff !important;
  text-decoration: none !important;
}



.statlabel {
  background: rgba(0,0,0,0.6);
  font-family: "Splatfont";
  display:block;
  border-radius:10px;
  padding: 5px;
  padding-bottom:8px;
  margin-bottom: 5px;
  color: #fff;
}

.subspeicon {
  background:rgba(0,0,0,0.5);
  border-radius:5px;
  height:48px
}
.subspe-bubble {
  background: rgba(0,0,0,0.5);
  padding:0px;
  border-radius: 5px;
  text-align:left;
  font-size:12pt;
  font-family:"Splatfont";
  color:#fff;
}

.statbar {
  font-family: "Splatfont";
  color:black;
  margin:0px !important;
  background: #000 !important;
}

.statbar.mini {
  margin-top: 3px !important;
  border-radius: 0px;
  height:15px;
}

.progress-bar-pink {
  color:black !important;
  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;
  background: repeating-linear-gradient( 45deg, #f22d8a, #f22d8a 15px, #d11b71 15px, #d11b71 30px );
}

.fa-ban {
  color: #f22d8a;
}

.labelright {
  position:absolute;
  right: 0px;
  text-align: right;
  padding-right:25px;
}

.lightup {
  border: 3px solid #fff;
}

.splatfont-white {
  font-family: "Splatfont";
  font-size: 16pt;
  color: #fff;
}

.icon-button {
  background: none;
  border: none;
  color: #fff;
  padding: 0px;
  font-size:28pt;
}

.fa.green {
  color: #00ff00;
}

.fa.red {
  color: #ff0000;
}

.icon-button:hover {
  color: #ccc;
}

.btn {
  background: #000;
  font-family:"Splatfont";
  color: #fff;
  min-width: 60px;
}

.btn:hover {
  color: #ccc !important;
}

.card {
  overflow-x:hidden;
  border-radius: 25px;
  padding: 10px;
  margin:4px;
  padding-top:0px;
  box-shadow: 0px 2px 8px 2px #000;
}

.itemcard {
  height:190px;
}

.itemcard .col-xs-12 {
  text-align: center;
}

.itemcard .gear-wrapper {
  width: 100px;
  height: 100px;
  background: none;
}

.itemcard .gear-wrapper .gear-icon {
  width: 100px;
}

.itemcard .abilityicon {
  margin:2px;
}

.card .col-md-6, .card .col-xs-4, .card .col-md-4 {
  text-align: center;
}


#utils {
  padding-top:10px;
  height: 105px;
  text-align: center;
  font-family: "Splatfont";
  font-size: 14pt;
  color: #fff;
}

#dialog {
  font-family:"Splatfont";
  border: none;
  padding-left: 10px;
  padding-right: 10px;
  height:auto;
}

#dialog .buttons {
  padding-top:5px;
  text-align:center;
}

#maincontainer {
  margin-bottom: 80px;
}

#dialog .buttons .button-left {
  text-align: left;
}

#dialog .buttons .button-right {
  text-align: right;
}
.basic-content h4 {
  margin-bottom: 0px !important;
}

#gearpicker-stats {
  background: rgba(0,0,0,0.5);
  padding:0px;
  border-radius: 5px;
  font-size:10pt;
  font-family:"Splatfont";
  color:#fff;
}

#gearpicker-stats img {
  width:28px;
  height:auto;
}

#gearpicker-stats div {
  height:2.2em;
  line-height:1em;
}

#minibar-container {
  background:rgba(0,0,0,0.5);
  border:3px solid rgba(0,0,0,0);
  border-radius:6px;
  margin-top:4px;
}

.picker {
  text-align:center;
  height:260px;
  overflow-y:scroll;
  background: rgba(0,0,0,0.2);
  background-image: url("assets/img/ui/bg-dots.png");
  background-size: 50px 50px;
  background-attachment:local;
  border-bottom: none;
  border-top: none;
}

@media only screen and (min-width:992px) {
  .picker-right {
    padding-left:0px !important;
  }
}

.minibar-label {
  font-family:"Splatfont";
  text-align:right;
  vertical-align: middle;
  color:#fff;
  font-size:9pt;
  padding-right:4px !important
}

.selected-label {
  height:3.2em;
  line-height:1.5em;
}

.selected-label span {
  font-size: 14pt;
}

.cardheader {
  padding-top:4px;
  padding-bottom:2px;
  background: rgba(20,20,20,0.8);
  background-image: url("assets/img/ui/bg-dots.png");
  background-size: 50px 50px;
  font-family: "Paintball";
  font-size: 16pt;
  text-align:center;
  color: #fff;
  position: relative;
}

.cardheader .icon-button {
  position: absolute;
  font-size: 14pt;
  right: 20px;
  top: 8px;
}

.row.match-my-cols {
  overflow: hidden;
}

.matched{
  margin-bottom: -99999px;
  padding-bottom: 99999px;
}

.panel-stats {
  border: 0px !important;

}

.screenshot-filler {
  position: relative;
  height: 100% !important;
}

.screenshot-filler img {
  height: 80px;
}

.screenshot-filler span {
  position: absolute;
  right: 20px;
  bottom: -4px;
  font-size: 10pt;
}

.panel-stats .panel-heading {
  border-radius: 5px;
  background: repeating-linear-gradient( 45deg, #8ffe19, #8ffe19 30px, #5ade09 30px, #5ade09 60px );
}

